--- a/templates/base.html
+++ b/templates/base.html
@@ -67,13 +67,13 @@
             <h6 class="nav-section-title">Gestión Académica</h6>
             <ul class="navbar-nav flex-column w-100">
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('evaluacion_integral_bp.gestionar_criterios') }}">
-                  <i class="bi bi-list-check"></i><span>Gestión de Ámbitos Parvularia</span>
+                <a class="nav-link" href="{{ url_for('admin_dashboard') }}">
+                  <i class="bi bi-house-door"></i><span>Dashboard</span>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('admin_dashboard') }}">
-                  <i class="bi bi-house-door"></i><span>Dashboard</span>
+                <a class="nav-link" href="{{ url_for('evaluacion_integral_bp.gestionar_criterios') }}">
+                  <i class="bi bi-list-check"></i><span>Gestión de Ámbitos Parvularia</span>
                 </a>
               </li>
               <li class="nav-item">
@@ -127,6 +127,13 @@
                   <i class="bi bi-house-door"></i><span>Dashboard</span>
                 </a>
               </li>
+              {% if session.get('es_coordinador') %}
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('mis_estudiantes.mis_estudiantes') }}">
+                  <i class="bi bi-people"></i><span>Mis Estudiantes y Boletas</span>
+                </a>
+              </li>
+              {% endif %}
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('evaluacion_integral_bp.gestionar_criterios') }}">
                   <i class="bi bi-list-check"></i><span>Gestión de Ámbitos Parvularia</span>
